kubernetes/data-lakehouse/base/management/coder/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: coder-ingress
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`coder.${cluster_domain}`)
      kind: Rule
      services:
        - name: coder
          port: 80
